// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeAnalytics with market data, pinned whole > produces exactly the figures it produced before the complexity work 1`] = `
{
  "accountsMissingInterestRate": 1,
  "allocationSlices": [
    {
      "color": "#a1665e",
      "key": "realEstate",
      "value": 12000000,
    },
    {
      "color": "#14b8a6",
      "key": "savings",
      "value": 1800000,
    },
    {
      "color": "#ec4899",
      "key": "auto",
      "value": 950000,
    },
    {
      "color": "#f59e0b",
      "key": "crypto",
      "value": 900000,
    },
    {
      "color": "#22c55e",
      "key": "investments",
      "value": 553840,
    },
    {
      "color": "#6366f1",
      "key": "cash",
      "value": 234567,
    },
  ],
  "annualDividendsCents": "3586n",
  "annualDividendsNetCents": "2435n",
  "annualInterestCents": "25500n",
  "annualPassiveCents": "27935n",
  "assetRows": [
    {
      "costBasis": null,
      "gain": null,
      "id": "cur",
      "institution": "LCL",
      "name": "Courant",
      "subtype": null,
      "tax": null,
      "type": "CHECKING",
      "value": "234567n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "liv",
      "institution": "LCL",
      "name": "Livret A",
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "1500000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "lep",
      "institution": "LCL",
      "name": "LEP",
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "300000n",
    },
    {
      "costBasis": "100000n",
      "gain": "23450n",
      "id": "pea",
      "institution": "Bourso",
      "name": "PEA",
      "subtype": "PEA",
      "tax": "4362n",
      "type": "INVESTMENT",
      "value": "223490n",
    },
    {
      "costBasis": "305000n",
      "gain": "25350n",
      "id": "cto",
      "institution": "Trade Republic",
      "name": "CTO",
      "subtype": "CTO",
      "tax": "7960n",
      "type": "INVESTMENT",
      "value": "330350n",
    },
    {
      "costBasis": "500000n",
      "gain": "400000n",
      "id": "cry",
      "institution": "",
      "name": "Crypto",
      "subtype": null,
      "tax": "125600n",
      "type": "CRYPTO",
      "value": "900000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "app",
      "institution": "",
      "name": "Appartement",
      "subtype": null,
      "tax": null,
      "type": "REAL_ESTATE",
      "value": "30000000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "car",
      "institution": "",
      "name": "Voiture",
      "subtype": null,
      "tax": null,
      "type": "AUTOMOBILE",
      "value": "950000n",
    },
  ],
  "benchmarkCAGRs": {
    "cac40": 5.352785987643505,
    "msciWorld": 11.239610150048108,
    "sp500": 7.726003716984353,
  },
  "debtAccounts": [
    {
      "equity": "12000000n",
      "id": "app",
      "institution": "",
      "liability": "18000000n",
      "ltv": 60,
      "name": "Appartement",
      "type": "REAL_ESTATE",
      "value": "30000000n",
    },
  ],
  "debtRatio": 97,
  "dividendCalendar": [
    {
      "alreadyNet": false,
      "annualEstCents": "585n",
      "annualNetCents": "388n",
      "annualRatePerShare": 2.986,
      "annualYield": 0.0071,
      "country": "NL",
      "daysLeft": -97,
      "divYield": 0.0071,
      "exDividendDate": "2026-04-22T12:00:00.000Z",
      "isPast": true,
      "isSoon": false,
      "isin": "NL0011585146",
      "name": "Ferrari",
      "subtype": "CTO",
      "symbol": "RACE",
      "taxRate": 0.33599999999999997,
      "valueCents": "82400n",
    },
    {
      "alreadyNet": false,
      "annualEstCents": "198n",
      "annualNetCents": "131n",
      "annualRatePerShare": 1.04,
      "annualYield": 0.0044,
      "country": "US",
      "daysLeft": 13,
      "divYield": 0.0044,
      "exDividendDate": "2026-08-10T12:00:00.000Z",
      "isPast": false,
      "isSoon": true,
      "isin": "US0378331005",
      "name": "Apple",
      "subtype": "CTO",
      "symbol": "AAPL",
      "taxRate": 0.33599999999999997,
      "valueCents": "45000n",
    },
    {
      "alreadyNet": false,
      "annualEstCents": "304n",
      "annualNetCents": "202n",
      "annualRatePerShare": 2.1,
      "annualYield": 0.0039,
      "country": "US",
      "daysLeft": 139,
      "divYield": 0.0039,
      "exDividendDate": "2026-12-14T12:00:00.000Z",
      "isPast": false,
      "isSoon": false,
      "isin": "US30303M1027",
      "name": "Meta",
      "subtype": "CTO",
      "symbol": "META",
      "taxRate": 0.33599999999999997,
      "valueCents": "78000n",
    },
    {
      "alreadyNet": false,
      "annualEstCents": "2499n",
      "annualNetCents": "1714n",
      "annualRatePerShare": null,
      "annualYield": null,
      "country": "FR",
      "daysLeft": null,
      "divYield": 0.02,
      "exDividendDate": null,
      "isPast": false,
      "isSoon": false,
      "isin": "FR0000120073",
      "name": "Air Liquide",
      "subtype": "CTO",
      "symbol": "AI.PA",
      "taxRate": 0.314,
      "valueCents": "124950n",
    },
  ],
  "effectiveTaxRate": 0.30731194295900177,
  "estimatedYearEndInterestHistory": [
    {
      "date": "1 janv.",
      "estimatedCents": 23800,
      "isoDate": "2026-01-01",
    },
    {
      "date": "16 janv.",
      "estimatedCents": 23800,
      "isoDate": "2026-01-16",
    },
    {
      "date": "1 févr.",
      "estimatedCents": 23800,
      "isoDate": "2026-02-01",
    },
    {
      "date": "16 févr.",
      "estimatedCents": 23800,
      "isoDate": "2026-02-16",
    },
    {
      "date": "1 mars",
      "estimatedCents": 23800,
      "isoDate": "2026-03-01",
    },
    {
      "date": "16 mars",
      "estimatedCents": 23800,
      "isoDate": "2026-03-16",
    },
    {
      "date": "1 avr.",
      "estimatedCents": 23800,
      "isoDate": "2026-04-01",
    },
    {
      "date": "16 avr.",
      "estimatedCents": 23800,
      "isoDate": "2026-04-16",
    },
    {
      "date": "1 mai",
      "estimatedCents": 23800,
      "isoDate": "2026-05-01",
    },
    {
      "date": "16 mai",
      "estimatedCents": 23800,
      "isoDate": "2026-05-16",
    },
    {
      "date": "1 juin",
      "estimatedCents": 23800,
      "isoDate": "2026-06-01",
    },
    {
      "date": "16 juin",
      "estimatedCents": 23800,
      "isoDate": "2026-06-16",
    },
    {
      "date": "1 juil.",
      "estimatedCents": 23800,
      "isoDate": "2026-07-01",
    },
    {
      "date": "16 juil.",
      "estimatedCents": 24579,
      "isoDate": "2026-07-16",
    },
  ],
  "estimatedYearEndSavingsInterestCents": "24579n",
  "garantis": "2034567n",
  "garantisPct": 58,
  "goals": [
    {
      "accountId": null,
      "accountName": null,
      "currentCents": "1066742n",
      "id": "g1",
      "name": "Patrimoine",
      "pct": 2,
      "remaining": "48933258n",
      "targetCents": "50000000n",
      "targetDate": null,
    },
    {
      "accountId": "liv",
      "accountName": "Livret A",
      "currentCents": "1500000n",
      "id": "g2",
      "name": "Fonds d'urgence",
      "pct": 75,
      "remaining": "500000n",
      "targetCents": "2000000n",
      "targetDate": "2027-01-01T12:00:00.000Z",
    },
  ],
  "grossAssets": "34438407n",
  "hasData": true,
  "hasDeclaredSavings": true,
  "hasExpenses": true,
  "hasSalary": true,
  "hasTaxData": true,
  "investAllHaveDates": true,
  "investCAGR": 10.071283244361684,
  "investPerfRows": [
    {
      "cagr": 16.15870702171247,
      "costBasis": "100000n",
      "gain": "23450n",
      "gainNet": "19088n",
      "id": "pea",
      "institution": "Bourso",
      "investmentStartDate": "2021-03-15T12:00:00.000Z",
      "name": "PEA",
      "returnPct": 23.45,
      "subtype": "PEA",
      "tax": "4362n",
      "value": "223490n",
    },
    {
      "cagr": 3.154361222407842,
      "costBasis": "305000n",
      "gain": "25350n",
      "gainNet": "17390n",
      "id": "cto",
      "institution": "Trade Republic",
      "investmentStartDate": "2024-01-01T12:00:00.000Z",
      "name": "CTO",
      "returnPct": 8.311475409836065,
      "subtype": "CTO",
      "tax": "7960n",
      "value": "330350n",
    },
  ],
  "investReturnPct": 12.049382716049383,
  "investTotalCostBasis": "405000n",
  "investTotalGain": "48800n",
  "investTotalGainNet": "36478n",
  "investTotalTax": "12322n",
  "investTotalValue": "553840n",
  "investedPct": 4,
  "momDelta": 84567,
  "monthlyExpensesCents": "185000n",
  "monthlyPassiveCents": 2327.9166666666665,
  "monthlySavedCents": "90000n",
  "netWorth": "1066742n",
  "netWorthBeforeTax": "1204664n",
  "performanceRows": [
    {
      "date": "mai 26",
      "delta": null,
      "deltaPct": null,
      "month": "2026-05",
      "netWorth": 1600000,
    },
    {
      "date": "juin 26",
      "delta": 50000,
      "deltaPct": 3.125,
      "month": "2026-06",
      "netWorth": 1650000,
    },
    {
      "date": "juil. 26",
      "delta": 84567,
      "deltaPct": 5.125272727272727,
      "month": "2026-07",
      "netWorth": 1734567,
    },
  ],
  "realYtdDividendsNetCents": "124n",
  "realYtdInterestNetCents": "8750n",
  "realYtdPassiveNetCents": "8874n",
  "risques": "1453840n",
  "runwayMonths": 9.72972972972973,
  "salaryNetCents": "320000n",
  "savingsCents": "1800000n",
  "savingsRate": 28.125,
  "taxRateCto": 0.314,
  "taxRatePea": 0.186,
  "topAssets": [
    {
      "costBasis": null,
      "gain": null,
      "id": "app",
      "institution": "",
      "name": "Appartement",
      "pct": 87,
      "subtype": null,
      "tax": null,
      "type": "REAL_ESTATE",
      "value": "30000000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "liv",
      "institution": "LCL",
      "name": "Livret A",
      "pct": 4,
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "1500000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "car",
      "institution": "",
      "name": "Voiture",
      "pct": 3,
      "subtype": null,
      "tax": null,
      "type": "AUTOMOBILE",
      "value": "950000n",
    },
    {
      "costBasis": "500000n",
      "gain": "400000n",
      "id": "cry",
      "institution": "",
      "name": "Crypto",
      "pct": 3,
      "subtype": null,
      "tax": "125600n",
      "type": "CRYPTO",
      "value": "900000n",
    },
    {
      "costBasis": "305000n",
      "gain": "25350n",
      "id": "cto",
      "institution": "Trade Republic",
      "name": "CTO",
      "pct": 1,
      "subtype": "CTO",
      "tax": "7960n",
      "type": "INVESTMENT",
      "value": "330350n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "lep",
      "institution": "LCL",
      "name": "LEP",
      "pct": 1,
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "300000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "cur",
      "institution": "LCL",
      "name": "Courant",
      "pct": 1,
      "subtype": null,
      "tax": null,
      "type": "CHECKING",
      "value": "234567n",
    },
    {
      "costBasis": "100000n",
      "gain": "23450n",
      "id": "pea",
      "institution": "Bourso",
      "name": "PEA",
      "pct": 1,
      "subtype": "PEA",
      "tax": "4362n",
      "type": "INVESTMENT",
      "value": "223490n",
    },
  ],
  "totalAllocation": 16438407,
  "totalLatentTax": "137922n",
  "totalLiabilities": "33233743n",
  "weightedSavingsRatePct": 0.017,
}
`;

exports[`computeAnalytics, pinned whole > produces exactly the figures it produced before the complexity work 1`] = `
{
  "accountsMissingInterestRate": 1,
  "allocationSlices": [
    {
      "color": "#a1665e",
      "key": "realEstate",
      "value": 12000000,
    },
    {
      "color": "#14b8a6",
      "key": "savings",
      "value": 1800000,
    },
    {
      "color": "#ec4899",
      "key": "auto",
      "value": 950000,
    },
    {
      "color": "#f59e0b",
      "key": "crypto",
      "value": 900000,
    },
    {
      "color": "#22c55e",
      "key": "investments",
      "value": 268490,
    },
    {
      "color": "#6366f1",
      "key": "cash",
      "value": 234567,
    },
  ],
  "annualDividendsCents": "225n",
  "annualDividendsNetCents": "149n",
  "annualInterestCents": "25500n",
  "annualPassiveCents": "25649n",
  "assetRows": [
    {
      "costBasis": null,
      "gain": null,
      "id": "cur",
      "institution": "LCL",
      "name": "Courant",
      "subtype": null,
      "tax": null,
      "type": "CHECKING",
      "value": "234567n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "liv",
      "institution": "LCL",
      "name": "Livret A",
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "1500000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "lep",
      "institution": "LCL",
      "name": "LEP",
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "300000n",
    },
    {
      "costBasis": "100000n",
      "gain": "23450n",
      "id": "pea",
      "institution": "Bourso",
      "name": "PEA",
      "subtype": "PEA",
      "tax": "4362n",
      "type": "INVESTMENT",
      "value": "223490n",
    },
    {
      "costBasis": "60000n",
      "gain": "-15000n",
      "id": "cto",
      "institution": "Trade Republic",
      "name": "CTO",
      "subtype": "CTO",
      "tax": "0n",
      "type": "INVESTMENT",
      "value": "45000n",
    },
    {
      "costBasis": "500000n",
      "gain": "400000n",
      "id": "cry",
      "institution": "",
      "name": "Crypto",
      "subtype": null,
      "tax": "125600n",
      "type": "CRYPTO",
      "value": "900000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "app",
      "institution": "",
      "name": "Appartement",
      "subtype": null,
      "tax": null,
      "type": "REAL_ESTATE",
      "value": "30000000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "car",
      "institution": "",
      "name": "Voiture",
      "subtype": null,
      "tax": null,
      "type": "AUTOMOBILE",
      "value": "950000n",
    },
  ],
  "benchmarkCAGRs": {
    "cac40": null,
    "msciWorld": 9.334725446662251,
    "sp500": 7.726003716984353,
  },
  "debtAccounts": [
    {
      "equity": "12000000n",
      "id": "app",
      "institution": "",
      "liability": "18000000n",
      "ltv": 60,
      "name": "Appartement",
      "type": "REAL_ESTATE",
      "value": "30000000n",
    },
  ],
  "debtRatio": 97,
  "dividendCalendar": [
    {
      "alreadyNet": false,
      "annualEstCents": "225n",
      "annualNetCents": "149n",
      "annualRatePerShare": null,
      "annualYield": null,
      "country": "US",
      "daysLeft": null,
      "divYield": 0.005,
      "exDividendDate": null,
      "isPast": false,
      "isSoon": false,
      "isin": "US0378331005",
      "name": "Apple",
      "subtype": "CTO",
      "symbol": "AAPL",
      "taxRate": 0.33599999999999997,
      "valueCents": "45000n",
    },
  ],
  "effectiveTaxRate": 0.3069115598063526,
  "estimatedYearEndInterestHistory": [
    {
      "date": "1 janv.",
      "estimatedCents": 23800,
      "isoDate": "2026-01-01",
    },
    {
      "date": "16 janv.",
      "estimatedCents": 23800,
      "isoDate": "2026-01-16",
    },
    {
      "date": "1 févr.",
      "estimatedCents": 23800,
      "isoDate": "2026-02-01",
    },
    {
      "date": "16 févr.",
      "estimatedCents": 23800,
      "isoDate": "2026-02-16",
    },
    {
      "date": "1 mars",
      "estimatedCents": 23800,
      "isoDate": "2026-03-01",
    },
    {
      "date": "16 mars",
      "estimatedCents": 23800,
      "isoDate": "2026-03-16",
    },
    {
      "date": "1 avr.",
      "estimatedCents": 23800,
      "isoDate": "2026-04-01",
    },
    {
      "date": "16 avr.",
      "estimatedCents": 23800,
      "isoDate": "2026-04-16",
    },
    {
      "date": "1 mai",
      "estimatedCents": 23800,
      "isoDate": "2026-05-01",
    },
    {
      "date": "16 mai",
      "estimatedCents": 23800,
      "isoDate": "2026-05-16",
    },
    {
      "date": "1 juin",
      "estimatedCents": 23800,
      "isoDate": "2026-06-01",
    },
    {
      "date": "16 juin",
      "estimatedCents": 23800,
      "isoDate": "2026-06-16",
    },
    {
      "date": "1 juil.",
      "estimatedCents": 23800,
      "isoDate": "2026-07-01",
    },
    {
      "date": "16 juil.",
      "estimatedCents": 24579,
      "isoDate": "2026-07-16",
    },
  ],
  "estimatedYearEndSavingsInterestCents": "24579n",
  "garantis": "2034567n",
  "garantisPct": 64,
  "goals": [
    {
      "accountId": null,
      "accountName": null,
      "currentCents": "789352n",
      "id": "g1",
      "name": "Patrimoine",
      "pct": 2,
      "remaining": "49210648n",
      "targetCents": "50000000n",
      "targetDate": null,
    },
    {
      "accountId": "liv",
      "accountName": "Livret A",
      "currentCents": "1500000n",
      "id": "g2",
      "name": "Fonds d'urgence",
      "pct": 75,
      "remaining": "500000n",
      "targetCents": "2000000n",
      "targetDate": "2027-01-01T12:00:00.000Z",
    },
  ],
  "grossAssets": "34153057n",
  "hasData": true,
  "hasDeclaredSavings": true,
  "hasExpenses": true,
  "hasSalary": true,
  "hasTaxData": true,
  "investAllHaveDates": true,
  "investCAGR": 12.73096048918636,
  "investPerfRows": [
    {
      "cagr": 16.15870702171247,
      "costBasis": "100000n",
      "gain": "23450n",
      "gainNet": "19088n",
      "id": "pea",
      "institution": "Bourso",
      "investmentStartDate": "2021-03-15T12:00:00.000Z",
      "name": "PEA",
      "returnPct": 23.45,
      "subtype": "PEA",
      "tax": "4362n",
      "value": "223490n",
    },
    {
      "cagr": -10.58680256599127,
      "costBasis": "60000n",
      "gain": "-15000n",
      "gainNet": "-15000n",
      "id": "cto",
      "institution": "Trade Republic",
      "investmentStartDate": "2024-01-01T12:00:00.000Z",
      "name": "CTO",
      "returnPct": -25,
      "subtype": "CTO",
      "tax": "0n",
      "value": "45000n",
    },
  ],
  "investReturnPct": 5.28125,
  "investTotalCostBasis": "160000n",
  "investTotalGain": "8450n",
  "investTotalGainNet": "4088n",
  "investTotalTax": "4362n",
  "investTotalValue": "268490n",
  "investedPct": 3,
  "momDelta": 84567,
  "monthlyExpensesCents": "185000n",
  "monthlyPassiveCents": 2137.4166666666665,
  "monthlySavedCents": "90000n",
  "netWorth": "789352n",
  "netWorthBeforeTax": "919314n",
  "performanceRows": [
    {
      "date": "mai 26",
      "delta": null,
      "deltaPct": null,
      "month": "2026-05",
      "netWorth": 1600000,
    },
    {
      "date": "juin 26",
      "delta": 50000,
      "deltaPct": 3.125,
      "month": "2026-06",
      "netWorth": 1650000,
    },
    {
      "date": "juil. 26",
      "delta": 84567,
      "deltaPct": 5.125272727272727,
      "month": "2026-07",
      "netWorth": 1734567,
    },
  ],
  "realYtdDividendsNetCents": "124n",
  "realYtdInterestNetCents": "8750n",
  "realYtdPassiveNetCents": "8874n",
  "risques": "1168490n",
  "runwayMonths": 9.72972972972973,
  "salaryNetCents": "320000n",
  "savingsCents": "1800000n",
  "savingsRate": 28.125,
  "taxRateCto": 0.314,
  "taxRatePea": 0.186,
  "topAssets": [
    {
      "costBasis": null,
      "gain": null,
      "id": "app",
      "institution": "",
      "name": "Appartement",
      "pct": 88,
      "subtype": null,
      "tax": null,
      "type": "REAL_ESTATE",
      "value": "30000000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "liv",
      "institution": "LCL",
      "name": "Livret A",
      "pct": 4,
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "1500000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "car",
      "institution": "",
      "name": "Voiture",
      "pct": 3,
      "subtype": null,
      "tax": null,
      "type": "AUTOMOBILE",
      "value": "950000n",
    },
    {
      "costBasis": "500000n",
      "gain": "400000n",
      "id": "cry",
      "institution": "",
      "name": "Crypto",
      "pct": 3,
      "subtype": null,
      "tax": "125600n",
      "type": "CRYPTO",
      "value": "900000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "lep",
      "institution": "LCL",
      "name": "LEP",
      "pct": 1,
      "subtype": null,
      "tax": null,
      "type": "SAVINGS",
      "value": "300000n",
    },
    {
      "costBasis": null,
      "gain": null,
      "id": "cur",
      "institution": "LCL",
      "name": "Courant",
      "pct": 1,
      "subtype": null,
      "tax": null,
      "type": "CHECKING",
      "value": "234567n",
    },
    {
      "costBasis": "100000n",
      "gain": "23450n",
      "id": "pea",
      "institution": "Bourso",
      "name": "PEA",
      "pct": 1,
      "subtype": "PEA",
      "tax": "4362n",
      "type": "INVESTMENT",
      "value": "223490n",
    },
    {
      "costBasis": "60000n",
      "gain": "-15000n",
      "id": "cto",
      "institution": "Trade Republic",
      "name": "CTO",
      "pct": 0,
      "subtype": "CTO",
      "tax": "0n",
      "type": "INVESTMENT",
      "value": "45000n",
    },
  ],
  "totalAllocation": 16153057,
  "totalLatentTax": "129962n",
  "totalLiabilities": "33233743n",
  "weightedSavingsRatePct": 0.017,
}
`;

exports[`computeDashboard, pinned whole > produces exactly the figures it produced before the complexity work 1`] = `
{
  "allocationHistory": [
    {
      "auto": 0,
      "cash": 200000,
      "crypto": 0,
      "date": "1 mai",
      "investments": 0,
      "isoDate": "2026-05-01",
      "realEstate": 0,
      "savings": 1400000,
    },
    {
      "auto": 0,
      "cash": 250000,
      "crypto": 0,
      "date": "15 juin",
      "investments": 0,
      "isoDate": "2026-06-15",
      "realEstate": 0,
      "savings": 1400000,
    },
    {
      "auto": 0,
      "cash": 250000,
      "crypto": 0,
      "date": "1 juil.",
      "investments": 0,
      "isoDate": "2026-07-01",
      "realEstate": 0,
      "savings": 1500000,
    },
    {
      "auto": 0,
      "cash": 234567,
      "crypto": 0,
      "date": "20 juil.",
      "investments": 0,
      "isoDate": "2026-07-20",
      "realEstate": 0,
      "savings": 1500000,
    },
  ],
  "allocationRaw": {
    "auto": 950000,
    "cash": 234567,
    "crypto": 900000,
    "investments": 268490,
    "realEstate": 12000000,
    "savings": 1800000,
  },
  "delta30": {
    "amount": 84567,
    "percent": 5.125272727272727,
  },
  "grossAssets": "34153057n",
  "hasAccounts": true,
  "history": [
    {
      "date": "1 mai",
      "isoDate": "2026-05-01",
      "netWorth": 1600000,
    },
    {
      "date": "15 juin",
      "isoDate": "2026-06-15",
      "netWorth": 1650000,
    },
    {
      "date": "1 juil.",
      "isoDate": "2026-07-01",
      "netWorth": 1750000,
    },
    {
      "date": "20 juil.",
      "isoDate": "2026-07-20",
      "netWorth": 1734567,
    },
  ],
  "institutions": [
    {
      "accounts": [
        {
          "id": "cur",
          "name": "Courant",
          "type": "CHECKING",
          "value": "234567n",
        },
        {
          "id": "liv",
          "name": "Livret A",
          "type": "SAVINGS",
          "value": "1500000n",
        },
        {
          "id": "lep",
          "name": "LEP",
          "type": "SAVINGS",
          "value": "300000n",
        },
        {
          "id": "pea",
          "name": "PEA",
          "type": "INVESTMENT",
          "value": "223490n",
        },
        {
          "id": "cto",
          "name": "CTO",
          "type": "INVESTMENT",
          "value": "45000n",
        },
        {
          "id": "cry",
          "name": "Crypto",
          "type": "CRYPTO",
          "value": "900000n",
        },
        {
          "id": "app",
          "name": "Appartement",
          "type": "REAL_ESTATE",
          "value": "30000000n",
        },
        {
          "id": "car",
          "name": "Voiture",
          "type": "AUTOMOBILE",
          "value": "950000n",
        },
        {
          "id": "loan",
          "name": "Prêt immo",
          "type": "LOAN",
          "value": "-15233743n",
        },
      ],
      "logoUrl": "https://www.google.com/s2/favicons?sz=256&domain=lcl.fr",
      "name": "LCL",
      "total": "18919314n",
    },
  ],
  "netWorth": "789352n",
  "totalLatentTax": "129962n",
  "totalLiabilities": "33233743n",
  "totalPassif": "33363705n",
}
`;
